Fix blog layout on narrow screens.

--- a/pages/blog/id.module.css
+++ b/pages/blog/id.module.css
@@ -2,3 +2,7 @@
   font-size: 16px;
   line-height: 24px;
 }
+
+.main {
+  overflow: scroll;
+}
